--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user: "search?q=%23idcon&src=typd"
+twitter_user: "search?q=%23idcon"
 twitter_tweet_button: true
 
 # Google +1
