--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://idcon.github.io
+url: https://idcon.org
 title: "#idcon"
 subtitle: Identity Conference
 author: idcon.org
